# Cryptography-From-First-Principle

./: .gitignore  CONTRIBUTING.md  Cargo.toml  MIGRATION-PLAN.md  README.md  SECURITY.md  VISION.md
.binder/: environment.yml  postBuild
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  content-request.md
.github/workflows/: ci.yml
docs/: index.html
docs/plans/: 2026-02-08-research-findings.md  2026-02-09-ship-to-github.md  2026-02-09-star-attraction-improvements.md  module-01-fill-plan.md
foundations/01-modular-arithmetic-groups/: README.md
foundations/01-modular-arithmetic-groups/break/: smooth-order-attack.ipynb  weak-generator-attack.ipynb
foundations/02-rings-fields-polynomials/: README.md
foundations/03-galois-fields-aes/: README.md
foundations/04-number-theory-rsa/: README.md
foundations/05-discrete-log-diffie-hellman/: README.md
foundations/06-elliptic-curves/: README.md
frontier/07-pairings/: README.md
frontier/08-lattices-post-quantum/: README.md
frontier/09-commitments-sigma-protocols/: README.md
frontier/10-snarks-starks/: README.md
frontier/11-homomorphic-encryption/: README.md
frontier/12-mpc/: README.md
scripts/: clean_print_formatting.py  fix_char_source.py  gen_notebook_stubs.py  generate_readme_images.py  python_to_sage.py  remove_dashes.py
shared/: Cargo.toml  convert_sage_to_python.py
shared/cryptolab/: __init__.py  modular.py  number_theory.py  plot.py
shared/src/: lib.rs  utils.rs
shared/tests/: test_modular.py  test_number_theory.py  test_plot.py
(+155 files in other folders)
